--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: ibrother
+title: froyo
 description: "The personal blog of ibrother, a student, gentooer, vimer."
 headline: A lovely blogger.
 tags: [ibrother, blog, linux, gentoo, vim, kde, program]
